src/snapshots/beans_xml__inject_value__tests__sb06_idref_child_bean_attr_snapshot.snap
---
source: src/inject_value.rs
expression: result
---
{
  "kind": "idref",
  "content": {
    "value": {
      "raw": "target",
      "kind": "bean"
    },
    "span": {
      "start": 13,
      "end": 19
    }
  }
}
