src/snapshots/beans_xml__inject_value__tests__sb06_idref_child_local_attr_snapshot.snap
---
source: src/inject_value.rs
expression: result
---
{
  "kind": "idref",
  "content": {
    "value": {
      "raw": "target",
      "kind": "local"
    },
    "span": {
      "start": 14,
      "end": 20
    }
  }
}
