src/snapshots/beans_xml__inject_value__tests__sb06_null_child_snapshot.snap
---
source: src/inject_value.rs
expression: result
---
{
  "kind": "null",
  "content": {
    "start": 0,
    "end": 7
  }
}
