src/snapshots/beans_xml__inject_value__tests__sb06_ref_child_local_attr_snapshot.snap
---
source: src/inject_value.rs
expression: result
---
{
  "kind": "ref",
  "content": {
    "value": {
      "raw": "target",
      "kind": "local"
    },
    "span": {
      "start": 12,
      "end": 18
    }
  }
}
