src/snapshots/beans_xml__inject_value__tests__sb06_ref_child_parent_attr_snapshot.snap
---
source: src/inject_value.rs
expression: result
---
{
  "kind": "ref",
  "content": {
    "value": {
      "raw": "target",
      "kind": "parent_container"
    },
    "span": {
      "start": 13,
      "end": 19
    }
  }
}
