src/snapshots/beans_xml__inject_value__tests__sb06_value_child_snapshot.snap
---
source: src/inject_value.rs
expression: result
---
{
  "kind": "value",
  "content": {
    "span": {
      "start": 0,
      "end": 42
    },
    "text": {
      "value": "42",
      "span": {
        "start": 32,
        "end": 34
      }
    },
    "value_type": {
      "value": {
        "raw": "java.lang.Integer"
      },
      "span": {
        "start": 13,
        "end": 30
      }
    },
    "placeholders": [],
    "spel_refs": []
  }
}
